3D cursor doesn't change position automatically in Texture Paint mode (Clone brush) when selecting cloning source with Ctrl+LMB #67860

Closed
opened 2019-07-28 23:10:38 +02:00 by Mateusz B · 5 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 417.35

Blender Version
Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-24 14:22, hash: 507ffee6e1
Worked: 2.79c

Short description of error
In Texture Paint mode (clone brush) 3D cursor doesn't move automatically to source of cloned texture area.
Ctrl+LMB set clone source correctly (you can paint from selected area), but to actually move 3D cursor you must right click.

Exact steps for others to reproduce the error

  • Ctrl+LMB on plane to set cloning source.
  • Paint on different surface area (texture is cloned correctly)

RMB anywhere -> 3D cursor moves to source location

GIF:
Cloning from B1 to A2. 3D cursor on B3.
131700_4.gif

clone-brush.blend

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 417.35 **Blender Version** Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-24 14:22, hash: `507ffee6e1` Worked: 2.79c **Short description of error** In Texture Paint mode (clone brush) 3D cursor doesn't move automatically to source of cloned texture area. Ctrl+LMB set clone source correctly (you can paint from selected area), but to actually move 3D cursor you must right click. **Exact steps for others to reproduce the error** - Ctrl+LMB on plane to set cloning source. - Paint on different surface area (texture is cloned correctly) # RMB anywhere -> 3D cursor moves to source location GIF: *Cloning from **B1** to **A2**. 3D cursor on **B3**.* ![131700_4.gif](https://archive.blender.org/developer/F7634327/131700_4.gif) [clone-brush.blend](https://archive.blender.org/developer/F7634306/clone-brush.blend)
Author

Added subscriber: @ElBaton

Added subscriber: @ElBaton
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2019-07-29 09:53:09 +02:00
Member

Can confirm, will have a look...

Can confirm, will have a look...

This issue was referenced by baff245b9d

This issue was referenced by baff245b9d64b7e2f82f81ef0100237e1c024fbc
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#67860
No description provided.