Fix T67860: missing 3d cursor update when picking texture clone location

Reviewers: sergey

Maniphest Tasks: T67860

Differential Revision: https://developer.blender.org/D5360