source/blender/editors/sculpt_paint/paint_image_proj.c
@@ -5733,6 +5733,7 @@ void paint_proj_stroke(const bContext *C,
       return;
     }
 
+    DEG_id_tag_update(&scene->id, ID_RECALC_COPY_ON_WRITE);
     ED_region_tag_redraw(ar);
 
     return;
